= Pendiente
 * Agregar los mensajes que faltan
  
= v00004 =
@ 11/12/2017
 * Facturacion Administrativa
 * Correciones a la SHELL y Crontab
 
= v00003 =
@ 01/12/2017
 * Facturacion Parcial
 
= v00002 =
@ 24/11/2017
 * Se controla bVigente='1' en tVehiculo
 
= v00001 =
@ 11/08/2017
 * Se crea GIT
 * Se agrega mensajes a_facturar_01 y a_facturar_02 con Mandril