@@ -1,0 +1,2 @@
+eclipse.preferences.version=1
+line.separator=\n
